Fix mobile overlap: switched to flex columns for reliable stacking

--- a/index.html
+++ b/index.html
@@ -132,18 +132,21 @@
 
         @media (max-width: 900px) {
             .dashboard-container {
-                grid-template-columns: 1fr;
-                grid-template-areas:
-                    "sidebar"
-                    "main"
-                    "right";
+                display: flex;
+                flex-direction: column;
                 padding: 1rem;
-                gap: 1rem;
+                gap: 1.5rem;
+                max-width: 100%;
             }
 
             .sidebar {
                 position: relative;
                 top: 0;
+                width: 100%;
+            }
+
+            .main-content {
+                width: 100%;
             }
 
             :root {
@@ -157,6 +160,7 @@
             .stats-grid {
                 grid-template-columns: 1fr !important;
                 padding: 0 1rem !important;
+                gap: 0.75rem !important;
             }
 
             .profile-image {
@@ -167,6 +171,10 @@
 
             .name {
                 font-size: 1.8rem;
+            }
+
+            .card {
+                padding: 1.25rem;
             }
         }
 
